other/advanced-restrict-image-registries/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    corp.com/allowed-registries: img.corp.com/*
  name: imageregistries-ns01
